# volume2gym

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: README.md
artifacts/huggingface/qwen3_4b_lora/: README.md
artifacts/huggingface/rule99_adapter/: ADAPTER_README.md  README.md  adapter_config.json
artifacts/huggingface/rule99_dataset/: README.md  adapted_outputs.jsonl  adapted_reward_ledgers.jsonl  adapter_weights.json  baseline_outputs.jsonl  baseline_reward_ledgers.jsonl  curriculum.json  cycle_ledger.json  evaluation_report.md  failure_clusters.json  heldout_eval.jsonl  next_training_batch.jsonl  reward_ledger_example.json  training_dataset.jsonl
cards/: README.md
cards/huggingface/: dataset-card.md  qwen3-4b-lora-card.md  symbolic-adapter-card.md
docs/: migration.md
examples/lantern_ledger/: README.md  units.json
legacy/: README.md
legacy/railroad_1959/: .env.template  PIPELINE_README.md  README.md  TODO.md  requirements.txt  run_training.py  test_env.py  test_verifiers_env.py
legacy/railroad_1959/environments/railroad_1959/: .env-metadata.json  README.md  pyproject.toml
legacy/railroad_1959/environments/railroad_1959/railroad_1959/: environment.py
legacy/railroad_1959/railroad_extraction/: generate_synthetic_sft.py  merge_results.py  run_extraction.py
legacy/railroad_1959/railroad_rl_training/: tinker_train.py  train.py  train.toml
provenance/: upstreams.json
src/volume2gym/: __init__.py  artifacts.py  cli.py  compiler.py  environment.py  exporters.py  extraction.py  failures.py  models.py  pipeline.py  protocols.py  providers.py  sources.py  splitter.py  trainers.py  verifier.py
src/volume2gym/integrations/: __init__.py  huggingface.py
src/volume2gym/profiles/: __init__.py  railroad.py
tests/: test_artifacts.py  test_cli.py  test_compiler.py  test_environment.py  test_examples.py  test_exporters.py  test_extraction.py  test_failures.py  test_huggingface_integration.py  test_packaging.py  test_pipeline.py  test_providers.py  test_public_api.py  test_railroad_profile.py  test_sources.py  test_splitter.py  test_trainers.py  test_verifier.py
(+7 files in other folders)
